--- a/packages/desktop-app/src/app/components/dialogs/manage-team-workspaces-dialog/manage-team-workspaces-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/manage-team-workspaces-dialog/manage-team-workspaces-dialog.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
 
-  <div *ngIf="doesTeamExist" class="workspace-menu-line">
+  <div *ngIf="doesRemoteWorkspaceExist" class="workspace-menu-line">
     <div class="workspace-icon-container remote">
       <span>{{loggedUser.teamName[0].toUpperCase()}}</span>
     </div>
