--- a/packages/desktop-app/src/app/components/command-bar/command-bar.component.html
+++ b/packages/desktop-app/src/app/components/command-bar/command-bar.component.html
@@ -20,47 +20,58 @@
       <button class="icon-button show-in-taskbar-only" (click)="false;" matTooltip="Sync all Integrations"><i class="moon-Refresh"></i></button>
 
       <button class="icon-button line-start hide-in-taskbar" (click)="showCreateDialog();" matTooltip="Add a new Session"
-              [disabled]="!isLocalWorkspace" [ngClass]="isLocalWorkspace ? '' : 'disabled-add-session'"><i class="moon-Add"></i></button>
+              [disabled]="isLeappTeamWorkspace" [ngClass]="isLeappTeamWorkspace ? 'disabled-add-session':'' "><i class="moon-Add"></i></button>
 
       <button class="icon-button hide-in-taskbar filtering {{filterExtended ? 'toggled-filter' : ''}}" (click)="toggleFilters();"
               matTooltip="Filter the Session list"><i class="moon-Filter"></i></button>
 
       <div class="form-control-input-icon">
-        <input spellcheck="false" formControlName="searchFilter" type="text" class="form-control search-bar" placeholder="Search session" />
+        <input spellcheck="false" formControlName="searchFilter" type="text" class="form-control search-bar" placeholder="Search session"/>
         <i class="moon-Search"></i>
       </div>
 
       <button class="icon-button hide-in-taskbar" (click)="syncAll();" matTooltip="Sync all Integrations"><i class="moon-Refresh"></i></button>
 
       <div class="line-end">
-<!--        <button class="icon-button top-right-option-button" (click)="showOptionDialog();" matTooltip="Show Leapp Options"><i-->
-<!--          class="moon-Settings"></i></button>-->
+        <!--        <button class="icon-button top-right-option-button" (click)="showOptionDialog();" matTooltip="Show Leapp Options"><i-->
+        <!--          class="moon-Settings"></i></button>-->
         <button class="icon-button top-right-option-button margin-right-fix notification" [matMenuTriggerFor]="notification_menu"
                 matTooltip="Show Leapp Notifications">
-          <img class="{{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}" src="assets/images/notifications.svg" alt="notifications button" title="" />
+          <img
+            class="{{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"
+            src="assets/images/notifications.svg" alt="notifications button" title=""/>
           <span class="notification-dot" *ngIf="isNotificationPending"></span>
         </button>
         <mat-menu #notification_menu>
           <button class="notification-menu-item" mat-menu-item (click)="goToWhatsNew();">
-            <img class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}" src="assets/images/books.svg" />&nbsp;<span>What's new</span>
+            <img
+              class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"
+              src="assets/images/books.svg"/>&nbsp;<span>What's new</span>
           </button>
 
           <button class="notification-menu-item" mat-menu-item (click)="goToGettingStarted();">
-            <i class="icon-not-menu moon-Check {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"></i>&nbsp;<span>Getting started</span>
+            <i
+              class="icon-not-menu moon-Check {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"></i>&nbsp;<span>Getting started</span>
           </button>
 
           <button class="notification-menu-item" mat-menu-item (click)="goToJoinTheCommunity();">
-            <img class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}" src="assets/images/slack.svg" />
+            <img
+              class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"
+              src="assets/images/slack.svg"/>
             &nbsp;<span>Join the community</span>
           </button>
 
           <button class="notification-menu-item" mat-menu-item (click)="openAnIssue();" [disabled]="!isIssueButtonEnabled">
-            <img class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}" src="assets/images/bug.svg" />
+            <img
+              class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"
+              src="assets/images/bug.svg"/>
             &nbsp;<span>Open an Issue</span>
           </button>
 
           <button class="notification-menu-item" mat-menu-item (click)="requestAFeature();" [disabled]="!isIssueButtonEnabled">
-            <img class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}" src="assets/images/lightbulb.svg" />
+            <img
+              class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"
+              src="assets/images/lightbulb.svg"/>
             &nbsp;<span>Request a Feature</span>
           </button>
 
@@ -68,7 +79,10 @@
 
           <ng-container *ngFor="let notification of notifications">
             <button class="notification-menu-item" mat-menu-item (click)="openInfoModal(notification);" [disabled]="!isIssueButtonEnabled">
-              <img class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}" src="assets/images/{{notification.read ? 'read-notification' : notification.icon ?? 'unread-notification'}}.svg" alt="{{notification.title}}"/>
+              <img
+                class="icon-not-menu {{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? 'invert' : ''}}"
+                src="assets/images/{{notification.read ? 'read-notification' : notification.icon ?? 'unread-notification'}}.svg"
+                alt="{{notification.title}}"/>
               <span class="notification-dot" *ngIf="!notification.read"></span>
               &nbsp;<span [ngClass]="!notification.read ? 'unread-text' : ''">{{notification.title}}</span>
             </button>
