chore: created the widget

--- a/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
+++ b/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
@@ -1,3 +1,4 @@
+<div class="sidebar-flex">
 <mat-list>
   <mat-list-item class="workspace-menu">
     <div mat-line class="workspace-menu-line" [matMenuTriggerFor]="workspaceMenu" (click)="setTrigger($event)"
@@ -91,5 +92,6 @@
 
     </mat-expansion-panel>
   </mat-accordion>
-
 </mat-list>
+<app-sync-pro-widget></app-sync-pro-widget>
+</div>
