--- a/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.scss
+++ b/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.scss
@@ -5,10 +5,10 @@ span {
   display: inline-block;
   width: 100%;
   font-weight: normal;
-  font-size: 12px;
+  font-size: 14px;
 }
 section {
-  padding: 0 10px;
+  padding: 10px 15px;
   margin: 0;
   display: flex;
   flex-direction: row;
