--- a/packages/desktop-app/src/app/components/lock-page/lock-page.component.scss
+++ b/packages/desktop-app/src/app/components/lock-page/lock-page.component.scss
@@ -1,7 +1,31 @@
 @import "../../../assets/scss/mixins/palette";
 
+.draggable-area {
+  width: 100vw;
+  height: 80px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-user-select: auto;
+  -webkit-user-drag: auto;
+  -webkit-app-region: drag;
+}
+
 .form-field {
   margin-bottom: 15px;
+  width: 350px;
+  input {
+    width: 100%;
+  }
+  .input-inner-button {
+    top: -2px;
+  }
+  .sign-in-loader {
+    position: absolute;
+    top: 7px;
+    right: -40px;
+    font-size: 17px;
+  }
 }
 
 .form-help {
@@ -27,48 +51,55 @@
 .full-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
   background: white;
 
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   .logo-column {
     height: 100%;
-    width: 96px;
-    margin-left: 48px;
-    border-left: 1px solid #dadada;
+    width: 240px;
+    border-right: 1px solid #dadada;
     display: flex;
     align-items: center;
-    justify-content: center;
 
     img {
       width: 96px;
       height: 96px;
       position: relative;
-      left: -48px;
+      left: 192px;
+      border-radius: 23%;
+      border: 1px solid #dadada;
     }
   }
 
-  .form-container {
+  .form-column-container {
+    width: 350px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    margin-left: 100px;
+    gap: 15px;
+    margin-right: 70px;
 
     .personal-data {
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: center;
+      gap: 15px;
 
       .letter-avatar {
         background: #ffffff;
         color: #dadada;
         border-radius: 50%;
         border: 1px solid #dadada;
+        width: 50px;
+        height: 50px;
+        position: relative;
+        top: 5px;
 
         display: flex;
         align-items: center;
@@ -77,28 +108,38 @@
         span {
           text-align: center;
           color: #666;
-          font-size: 17px;
+          font-size: 16px;
           font-style: normal;
           font-weight: 400;
           line-height: 34px;
         }
       }
 
+      .email-and-name {
+        width: 350px;
+      }
+
       .name {
         color: #000;
-        font-size: 23px;
+        font-size: 19px;
         font-style: normal;
         font-weight: 400;
         line-height: 34px;
         text-align: left;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
 
       .email {
         color: #999;
-        font-size: 20px;
+        font-size: 16px;
         font-style: normal;
         font-weight: 400;
         line-height: 23px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     }
   }
@@ -108,9 +149,26 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-right: 50px;
 
     .hr {
-
+      color: #dadada;
+      border-right: 1px solid #dadada;
+      height: 140px;
     }
   }
+
+  .local-workspace {
+    .link-to-local {
+      text-decoration: underline;
+      transition: opacity 0.3s ease;
+      &:hover {
+        transition: opacity 0.3s ease;
+        cursor: pointer;
+        opacity: 0.7;
+      }
+    }
+  }
+
+
 }
